added conversion api
